Refactor Remove Defendant Account Party request and response models to use generated classes
