# src/main/java/uk/gov/hmcts/opal/controllers/DefendantAccountApiController.java
@@ -17,8 +17,6 @@ import uk.gov.hmcts.opal.dto.GetDefendantAccountConsolidatedAccountsResult;
 import uk.gov.hmcts.opal.dto.GetDefendantAccountImpositionsResponse;
 import uk.gov.hmcts.opal.dto.UpdateDefendantAccountResponse;
 import uk.gov.hmcts.opal.dto.history.DefendantAccountHistoryResponse;
-import uk.gov.hmcts.opal.dto.request.RemoveDefendantAccountPartyRequest;
-import uk.gov.hmcts.opal.dto.response.RemoveDefendantAccountPartyResponse;
 import uk.gov.hmcts.opal.generated.http.api.DefendantAccountApi;
 import uk.gov.hmcts.opal.generated.model.AtAGlanceResponseDefendantAccount;
 import uk.gov.hmcts.opal.generated.model.GetDefendantAccountHeaderSummary200Response;
@@ -32,7 +30,6 @@ import uk.gov.hmcts.opal.generated.model.RemoveDefendantAccountPartyRequestDefen
 import uk.gov.hmcts.opal.generated.model.RemoveDefendantAccountPartyResponseDefendantAccount;
 import uk.gov.hmcts.opal.generated.model.UpdateDefendantAccountRequestPayload;
 import uk.gov.hmcts.opal.generated.model.UpdateDefendantAccountResponsePayload;
-import uk.gov.hmcts.opal.mapper.RemoveDefendantAccountPartyMapper;
 import uk.gov.hmcts.opal.mapper.history.DefendantAccountHistoryResponseMapper;
 import uk.gov.hmcts.opal.service.DefendantAccountPartyService;
 import uk.gov.hmcts.opal.service.DefendantAccountService;
@@ -48,7 +45,6 @@ public class DefendantAccountApiController implements DefendantAccountApi {
     private final DefendantAccountHistoryResponseMapper defendantAccountHistoryResponseMapper;
     private final ImpositionService impositionService;
     private final DefendantAccountPartyService defendantAccountPartyService;
-    private final RemoveDefendantAccountPartyMapper removeDefendantAccountPartyMapper;
 
     @Override
     @FeatureToggle(feature = RELEASE_1B, defaultValueProperty = RELEASE_1B_ENABLED_PROPERTY)
@@ -123,13 +119,11 @@ public class DefendantAccountApiController implements DefendantAccountApi {
         log.debug(":DELETE:removeDefendantAccountParty: for defendant id: {} and defendantAccountPartyId: {}",
             defendantAccountId, defendantAccountPartyId);
 
-        RemoveDefendantAccountPartyRequest serviceRequest =
-            removeDefendantAccountPartyMapper.toServiceRequest(request);
-        RemoveDefendantAccountPartyResponse serviceResponse =
+        RemoveDefendantAccountPartyResponseDefendantAccount serviceResponse =
             defendantAccountPartyService.removeDefendantAccountParty(
-                defendantAccountId, defendantAccountPartyId, businessUnitId, ifMatch, serviceRequest);
+                defendantAccountId, defendantAccountPartyId, businessUnitId, ifMatch, request);
 
-        return buildResponse(serviceResponse, removeDefendantAccountPartyMapper.toGeneratedResponse(serviceResponse));
+        return buildResponse(serviceResponse);
     }
 
     @Override
